# autotrade

./: .env.staging.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  ai_futures_auto_trading_integrated_roadmap.xlsx  docker-compose.staging.yml  index.html  offline.html
assets/: index-4csyy1OV.js  index-6Z0tzgoX.js  index-8PWiPOi2.js  index-A701nwaM.js  index-B-i9QrBI.js  index-B02Y7wgX.js  index-B0EMYiy7.js  index-B2oexjJT.js  index-B3_c7hSJ.js  index-B5gksq9L.js  index-B67ZplAp.js  index-B8oQ0pp3.css  index-B8uFinQY.js  index-B9RDs-um.js  index-BCUhEm_S.js  index-BCZTIy1I.js  index-BCqBSdHa.js  index-BE7u5suw.js  index-BGL6N4Nz.js  index-BIOiAJHs.css  index-BJti5X3w.js  index-BRjXeWtz.js  index-B_7Mrozz.js  index-Bajjp7KO.js  index-BbnxNvJW.js  index-BbnxRa8U.js  index-Be7e13CU.js  index-BfEfxe0L.js  index-BgxdsZY0.js  index-BkZdHa4g.js  index-Bm99rxMp.js  index-BmayKw6b.js  index-BnsEqKcB.js  index-BqBlaQ4D.js  index-BuYm-bxs.js  index-Bv04Wiaz.js  index-ByrlKk1P.js  index-C8gQ43_Z.js  index-CEgf9nzP.js  index-CHplAxme.js  (+54 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  app_desktop_launcher.py  pyproject.toml  requirements.txt
docs/: agent_architecture.md  agent_decision_schema.md  agent_design.md  agent_memory.md  agent_no_direct_order_guard.md  agent_os_progress_report.md  agent_strategy_input_schema.md  (+152 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  _generate_icons.py  icon.icns
src-tauri/src/: lib.rs  main.rs
(+743 files in other folders)
