[package]
name = "agent-trader-v1"
version = "1.0.0"
description = "Agent Trader v1 — AI 에이전트 단타 자동매매 관제 (베타)"
authors = ["Agent Trader Beta"]
edition = "2021"
rust-version = "1.77"

# 본 PR 시점에는 Rust 툴체인이 없어도 frontend 테스트 / build 는 그대로 가능.
# 실제 Tauri 빌드는 docs/desktop_packaging.md 의 §6 빌드 가이드를 따른다.

[lib]
name = "agent_trader_v1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[features]
# `tauri-build` enables this; it doesn't need to be in the default features.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
